--- a/templates/freshFruit/base.html
+++ b/templates/freshFruit/base.html
@@ -26,7 +26,7 @@
 					<span>|</span>
 					<a href="cart.html">我的购物车</a>
 					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
+					<a href="{% url 'usercenter:user_center_order'%}">我的订单</a>
 				</div>
 			</div>
 		</div>		
