--- a/templates/freshFruit/base_index.html
+++ b/templates/freshFruit/base_index.html
@@ -10,8 +10,10 @@
 			<input type="button" class="input_btn fr" name="" value="搜索">
 		</div>
 		<div class="guest_cart fr">
+				<i id="end"></i>
+
 			<a href="cart.html" class="cart_name fl">我的购物车</a>
-			<div class="goods_count fl" id="show_count">{%block cartnumber%}0{%endblock%}</div>
+			<div class="goods_count fl" id="show_count">{{number}}</div>
 		</div>
 	</div>
 
