--- a/templates/freshFruit/user_center_order.html
+++ b/templates/freshFruit/user_center_order.html
@@ -10,27 +10,27 @@
 				<h3 class="common_title2">全部订单</h3>
 				{%for orde in orderlist%}
 				<ul class="order_list_th w978 clearfix">
-					<li class="col01">2016-8-21 17:36:24</li>
-					<li class="col02">订单号：56872934</li>
-					<li class="col02 stress">未支付</li>		
+					<li class="col01">{{orde.order.orderTime}}</li>
+					<li class="col02">订单号：{{orde.order.orderNumber}}</li>
+					<li class="col02 stress">{%if orde.order.isFinish == 1%}已付款{%else%}未支付{%endif%}</li>		
 				</ul>
 				<table class="order_list_table w980">
 					<tbody>
 						<tr>
 							<td width="55%">
-							{%for i in orde%}
+							{% for i in orde.orderdetail %}:
 								<ul class="order_goods_list clearfix">					
-									<li class="col01"><img src="{% static 'images/goods02.jpg' %}"></li>
-									<li class="col02">{{i.goodsName}}<em>{{i.goodsPrice}}元/500g</em></li>	
-									<li class="col03">{{i.buyCount}}</li>
-									<li class="col04">{{i.goodsPrice}}元</li>	
+									<li class="col01"><img src="/static/{{i.good.imgPath}}"></li>
+									<li class="col02">{{i.od.goodsName}}<em>{{i.od.goodsPrice}}元/500g</em></li>	
+									<li class="col03">{{i.od.buyCount}}</li>
+									<li class="col04">{{i.od.goodsPrice}}元</li>	
 								</ul>
-							{%endfor%}
+							{% endfor %}
 					
 							</td>
 							<td width="15%"></td>
-							<td width="15%">待付款</td>
-							<td width="15%"><a href="#" class="oper_btn">去付款</a></td>
+							<td width="15%">{%if orde.order.isFinish == 1%}已付款{%else%}待付款{%endif%}</td>
+							<td width="15%"><a href="#" class="oper_btn">{%if orde.order.isFinish == 1%}查看物流{%else%}去付款{%endif%}</a></td>
 						</tr>
 					</tbody>
 				</table>
