--- a/templates/freshFruit/base_user.html
+++ b/templates/freshFruit/base_user.html
@@ -11,6 +11,7 @@
 			<input type="button" class="input_btn fr" name="" value="搜索">
 		</div>		
 	</div>
+	{%block user_message%}
 	<div class="main_con clearfix">
 		<div class="left_menu_con clearfix">
 			<h3>用户中心</h3>
@@ -25,6 +26,7 @@
 				{%endblock %}
 			</ul>
 		</div>
+	{%endblock %}
 
 
 {%endblock%}
