--- a/templates/freshFruit/detail.html
+++ b/templates/freshFruit/detail.html
@@ -7,6 +7,17 @@
 <script type="text/javascript" src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/detail.js' %}"></script>
 
+<script type="text/javascript" src='/static/tiny_mce/tiny_mce.js'></script>
+    <script type="text/javascript">
+        tinyMCE.init({
+            'mode':'textareas',
+            'theme':'advanced',
+            'width':1000,
+            'height':300
+        });
+    </script>
+
+    
 <div class="breadcrumb">
 		<a href="#">全部分类</a>
 		<span>></span>
@@ -61,15 +72,27 @@
 
 		<div class="r_wrap fr clearfix">
 			<ul class="detail_tab clearfix">
-				<li class="active">商品介绍</li>
+				<li class="active introd">商品介绍</li>
 					
-				<li>商品评论</li>
+				<li class="comment">商品评论</li>
 			</ul>
 
 			<div class="tab_content">
 				<dl>
 					<dt></dt>
-					<dd>{{good.goodsDetail|safe}}</dd>
+					<dd class="detail">{{good.goodsDetail|safe}}</dd>
+					<div class="formtable">
+						<form action="/comment{{good.id}}/" method="post" style="display:none" class="form">
+						
+							{%for i in GoodsComment%}
+							<p >{{i.userName}}  {{i.commentDate}}</p>
+							<dd >{{i.comment|safe}}</dd>
+							<hr name='goodId' value='{{good.id}}'>
+							{%endfor%}
+							<textarea class="com" name='comment'></textarea>
+							<input type="submit" value="提交评论">
+						</form>
+					</div>
 				</dl>
 			</div>
 
@@ -77,8 +100,77 @@
 	</div>
 
 
- </script>
 	<div class="add_jump"></div>
+
+	<script type="text/javascript">
+		$(function () {
+			$('.detail_tab .comment').click(function () {
+				$(this).addClass('active').siblings('li').removeClass('active');
+			$('.tab_content .formtable form').show();
+			// $('.tab_content com').show();
+			$('.tab_content .detail').hide();
+
+			});
+
+			$('.detail_tab .introd').click(function () {
+			$(this).addClass('active').siblings('li').removeClass('active');
+			$('.tab_content .formtable form').hide();
+			// $('.tab_content com').show();
+			$('.tab_content .detail').show();
+		
+			})
+		})
+	</script>
+	<script>
+    (function($) {
+        $.extend({
+            tipsBox: function(options) {
+                options = $.extend({
+                    obj: null,  
+                    str: "+1", 
+                    startSize: "30px",  
+                    endSize: "60px",   
+                    interval: 1000,  
+                    color: "#ff5400",    
+                    callback: function() {}
+                }, options);
+                $("body").append("<span class='num'>"+ options.str +"</span>");
+                var box = $(".num");
+                var left = options.obj.offset().left + options.obj.width()/2 + 190;
+                var top = options.obj.offset().top - options.obj.height()-200;
+                box.css({
+                    "position": "absolute",
+                    "left": left + "px",
+                    "top": top + "px",
+                    "z-index": 9999,
+                    "font-size": options.startSize,
+                    "line-height": options.endSize,
+                    "color": options.color
+                });
+                box.animate({
+                    "font-size": options.endSize,
+                    "opacity": "0",
+                    "top": top - parseInt(options.endSize) + "px"
+                }, options.interval , function() {
+                    box.remove();
+                    options.callback();
+                });
+            }
+        });
+    })(jQuery);
+</script>
+<script>
+	$(function() {
+		$(".add_cart").click(function() {
+			$.tipsBox({
+				obj: $(this),
+				str: "+1",
+                callback: function() {
+                }
+			});
+		});
+	});
+</script>
 	
 {%endblock%}
 
