--- a/templates/freshFruit/place_order.html
+++ b/templates/freshFruit/place_order.html
@@ -9,7 +9,9 @@
 	<div class="common_list_con clearfix">
 		<dl>
 			<dt>寄送到：</dt>
-			<dd><input type="radio" name="" checked="">北京市 海淀区 东北旺西路8号中关村软件园 （李思 收） 182****7528</dd>
+			{% for area in addr %}
+			<dd><input type="radio" name="" checked="">{{area.province}} {{area.city}} {{area.dis}} {{area.detail}}（{{area.addressee}} 收） {{area.phonenumber}}</dd>
+			{% endfor %}
 		</dl>
 		<a href="user_center_site.html" class="edit_site">编辑收货地址</a>
 
@@ -39,37 +41,30 @@
 			<li class="col04">数量</li>
 			<li class="col05">小计</li>		
 		</ul>
+		{% for i in orderlist %}
 		<ul class="goods_list_td clearfix">
-			<li class="col01">1</li>			
-			<li class="col02"><img src="{% static 'freshFruit/images/goods/goods012.jpg' %}"></li>
-			<li class="col03">奇异果</li>
+			<li class="col01">{{i.count}}</li>			
+			<li class="col02"><img src="/static/{{i.goods.imgPath}}"></li>
+			<li class="col03">{{i.goods.goodsName}}</li>
 			<li class="col04">500g</li>
-			<li class="col05">25.80元</li>
-			<li class="col06">1</li>
-			<li class="col07">25.80元</li>	
+			<li class="col05">{{i.goods.goodsPrice}}</li>
+			<li class="col06">{{i.goodscount}}</li>
+			<li class="col07">{{i.sumtotal}}元</li>	
 		</ul>
-		<ul class="goods_list_td clearfix">
-			<li class="col01">2</li>			
-			<li class="col02"><img src="{% static 'freshFruit/images/goods/goods003.jpg' %}"></li>
-			<li class="col03">大兴大棚草莓</li>
-			<li class="col04">500g</li>
-			<li class="col05">16.80元</li>
-			<li class="col06">1</li>
-			<li class="col07">16.80元</li>	
-		</ul>
+		{% endfor %}
 	</div>
 
 	<h3 class="common_title">总金额结算</h3>
 
 	<div class="common_list_con clearfix">
 		<div class="settle_con">
-			<div class="total_goods_count">共<em>2</em>件商品，总金额<b>42.60元</b></div>
-			<div class="transit">运费：<b>10元</b></div>
-			<div class="total_pay">实付款：<b>52.60元</b></div>
+			<div class="total_goods_count">共<em>{{goodsamount}}</em>件商品，总金额<b>{{alltotal}}元</b></div>
+			<div class="transit">运费：<b>{{freight}}元</b></div>
+			<div class="total_pay">实付款：<b>{{allprice}}元</b></div>
 		</div>
 	</div>
 
 	<div class="order_submit clearfix">
-		<a href="javascript:;" id="order_btn">提交订单</a>
+		<a href="{% url 'cart:place_order'%}?list={{cartlist}}&&action=1" id="order_btn">提交订单</a>
 	</div>	
 {%endblock%}
