--- a/templates/freshFruit/cart.html
+++ b/templates/freshFruit/cart.html
@@ -1,7 +1,7 @@
 {%extends 'freshFruit/base_user.html'%}
 {% load static from staticfiles %}
 {%block option%}购物车{%endblock%}
-
+{%block user_message%}{%endblock%}
 {%block content%}
 <div class="total_count">全部商品<em>2</em>件</div>	
 	<ul class="cart_list_th clearfix">
@@ -12,45 +12,134 @@
 		<li class="col05">小计</li>
 		<li class="col06">操作</li>
 	</ul>
+<form action="/statements/" method="post">
+	{%for i in lis%}
 	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="{% static 'freshFruit/images/goods/goods012.jpg' %}"></li>
-		<li class="col03">奇异果<br><em>25.80元/500g</em></li>
+		<li class="col01"><input type="checkbox" name="" id='per' checked="checked"></li>
+		<li class="col02"><img src="{% static i.good.imgPath %}"></li>
+		<li class="col03" >{{i.good.goodsName}}<br><em>{{i.good.goodsPrice}}元/500g</em></li>
 		<li class="col04">500g</li>
-		<li class="col05">25.80元</li>
+		<li class="col05">{{i.good.goodsPrice}}元</li>
 		<li class="col06">
 			<div class="num_add">
 				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">	
+				<input type="text" class="num_show fl" value="{{i.cart.buyCount}}">	
 				<a href="javascript:;" class="minus fl">-</a>	
 			</div>
 		</li>
 		<li class="col07">25.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
+		<li class="col08"><a href="javascript:;" value="{{i.cart.id}}">删除</a></li>
 	</ul>
-
-	<ul class="cart_list_td clearfix">
-		<li class="col01"><input type="checkbox" name="" checked></li>
-		<li class="col02"><img src="{% static 'freshFruit/images/goods/goods003.jpg' %}"></li>
-		<li class="col03">大兴大棚草莓<br><em>16.80元/500g</em></li>
-		<li class="col04">500g</li>
-		<li class="col05">16.80元</li>
-		<li class="col06">
-			<div class="num_add">
-				<a href="javascript:;" class="add fl">+</a>
-				<input type="text" class="num_show fl" value="1">	
-				<a href="javascript:;" class="minus fl">-</a>	
-			</div>
-		</li>
-		<li class="col07">16.80元</li>
-		<li class="col08"><a href="javascript:;">删除</a></li>
-	</ul>
-	
+	{%endfor%}
 
 	<ul class="settlements">
-		<li class="col01"><input type="checkbox" name="" checked=""></li>
-		<li class="col02">全选</li>
+		<li class="col01"><input type="checkbox" name="" checked="checked" id='all'></li>
+		<li class="col02" >全选</li>
 		<li class="col03">合计(不含运费)：<span>¥</span><em>42.60</em><br>共计<b>2</b>件商品</li>
-		<li class="col04"><a href="place_order.html">去结算</a></li>
+		<li class="col04"><input type="submit" value='去结算' style="width: 100% ;height: 77px;background-color:#ff3d3d ;font-family: Microsoft Yahei;color: #fff;border:0px" ></li>
+		<!-- <a href="javascript:;">去结算</a> -->
 	</ul>
+</form>
+
+	<script type="text/javascript">
+
+		function count() {
+			// alert($(':checkbox:checked:not(#all)').length)
+			$('.settlements li b').html($(':checkbox:checked:not(#all)').length)
+			$('.total_count em').html($(':checkbox:checked:not(#all)').length)
+		}
+		function compute() {
+			sum=0
+			$('.cart_list_td').each(function(){
+			oprice=parseFloat($(this).children('.col05').html().split('元')[0])*100*parseInt($(this).children('.col06').children('.num_add').children('.num_show').val())/100
+			$(this).children('.col07').html(oprice+'元')
+			if ($(this).children('li').children('input').prop('checked')){
+				sum=sum+oprice
+			}
+			});
+			$('.settlements .col03 em').html(sum)
+		};
+
+		$(':checkbox').click(function(){
+			count()
+		});
+		
+		$('.num_add input').change(function(){
+			compute()
+		});
+
+		$('.num_add .add').click(function () {
+			$(this).siblings('input').val(parseInt($(this).siblings('input').val())+1);
+			$('.num_add input').change()
+			
+		});
+		$('.num_add .minus').click(function () {
+			if (parseInt($(this).siblings('input').val()) >1 ){
+				$(this).siblings('input').val(parseInt($(this).siblings('input').val())-1);
+				$('.num_add input').change()
+			}
+		})
+
+		count()
+		compute()
+		//全选全消
+		$('#all').click(function(){
+				if($(this).prop('checked')){
+					$(':checkbox:not(#all)').prop('checked',true).next().attr('name','count')
+					compute();
+					count()
+				}else{
+					$(':checkbox:not(#all)').prop('checked',false).next().attr('name','');
+					compute();
+					count();
+				}
+			});
+			$(':checkbox:not(#all)').click(function(){
+				compute();
+				if($(this).prop('checked')){
+					$(this).next().attr('name','count')
+				}else{
+					$(this).next().attr('name','')
+				}
+			});
+			//删除
+			$('.col08 a').click(function (){
+				// $(this).parent().parent().remove();
+				// compute();
+				// count();
+				var cthis=$(this).parent().parent() //接收到后台信息后再删除
+				$.ajax({
+				   	 	url: '/deleteHander/',
+				    	type: 'POST',
+				    	dataType: 'json',
+				    	data:{'cartId':$(this).attr('value')}
+							})
+							.done(function(data) {
+								cthis.remove();
+								compute();
+								count();
+							})
+							.fail(function() {
+								error_name = true;
+						    alert('服务器超时，请重试！');
+							});
+			})
+			
+			// $('.settlements .col04').click(function() {
+			// 	$.ajax({
+			// 	   	 	url: '/deleteHander/',
+			// 	    	type: 'POST',
+			// 	    	dataType: 'json',
+			// 	    	data:{'cartId':$(this).attr('value')}
+			// 				})
+			// 				.done(function(data) {
+								
+			// 				})
+			// 				.fail(function() {
+			// 					error_name = true;
+			// 			    alert('服务器超时，请重试！');
+			// 				});
+			// })
+			
+	</script>
 {%endblock%}
