--- a/templates/freshFruit/base_index.html
+++ b/templates/freshFruit/base_index.html
@@ -12,7 +12,7 @@
 		<div class="guest_cart fr">
 				<i id="end"></i>
 
-			<a href="cart.html" class="cart_name fl">我的购物车</a>
+			<a href="{% url 'cart:cart'%}" class="cart_name fl">我的购物车</a>
 			<div class="goods_count fl" id="show_count">{{number}}</div>
 		</div>
 	</div>
