--- a/templates/freshFruit/detail.html
+++ b/templates/freshFruit/detail.html
@@ -47,7 +47,7 @@
 			</div>
 			<div class="total">总价：<em>{{good.goodsPrice}}元</em></div>
 			<div class="operate_btn">
-				<a href="/placeoreder/?" class="buy_btn">立即购买</a>
+				<a href="/place_order/?" class="buy_btn">立即购买</a>
 				<a href="javascript:;" class="add_cart" id="add_cart" value='{{good.id}}'>加入购物车</a>				
 			</div>
 		</div>
