--- a/templates/freshFruit/login.html
+++ b/templates/freshFruit/login.html
@@ -6,6 +6,15 @@
 
 
 {%block content%}
+<script type="text/javascript" src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
+<script type="text/javascript">
+			$(function() {
+			$('#verifychangecode').css('cursor','pointer').click(function(){
+				$('#verifycode').attr('src','/verifycode/?'+Math.random())
+			});
+		});
+</script>
+
 <div class="login_top clearfix">
 		<a href="{% url 'index:indexPage' %}" class="login_logo"><img src="{% static 'images/logo02.png' %}"></a>	
 	</div>
@@ -25,6 +34,13 @@
 						<div class="user_error">{{error.name}}</div>
 						<input type="password" name="pwd" class="pass_input" placeholder="请输入密码" value="{{user.uPassword}}" >
 						<div class="pwd_error">{{error.password}}</div>
+						<div class='yzm_check'>
+								<!-- 验证码 -->															
+								<input type="text" class="yzm_input" name="ucode">
+								<img id='verifycode' class='verifycode' src="/verifycode/" name='vecode' alt="CheckCode">
+								<span id="verifychangecode">看不清楚，换一个</span>
+						</div>
+
 						<div class="more_input clearfix">
 							<input type="checkbox" name="check">
 							<label>记住用户名</label>
