--- a/templates/freshFruit/base_index.html
+++ b/templates/freshFruit/base_index.html
@@ -6,8 +6,10 @@
 <div class="search_bar clearfix">
 		<a href="{% url 'index:indexPage' %}" class="logo fl"><img src="{% static 'images/logo.png' %}"></a>
 		<div class="search_con fl">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
+			<form action="/search/" target="_blank">
+				<input type="text" class="input_text fl" name="q" placeholder="搜索商品">
+				<input type="submit" class="input_btn fr" name="" value="搜索">
+			</form>
 		</div>
 		<div class="guest_cart fr">
 				<i id="end"></i>
