--- a/templates/freshFruit/index.html
+++ b/templates/freshFruit/index.html
@@ -55,7 +55,7 @@
 				<span>|</span>
 				
 					{%for ogood in i.goodOtherList%}
-								<a href="/detail/?goodsId={{i.id}}">{{ogood.goodsName}}</a>
+								<a href="/detail/?goodsId={{ogood.id}}">{{ogood.goodsName}}</a>
 					{%endfor%}
 				
 			</div>
