--- a/templates/freshFruit/place_order.html
+++ b/templates/freshFruit/place_order.html
@@ -69,8 +69,8 @@
 	</div>
 
 	<div class="order_submit clearfix">
-		<!-- <a href="{% url 'cart:place_hander'%}?list=1&&list=2" id="order_btn">提交订单</a> -->
-		<input type="submit" name="" value="提交订单" id="order_btn">
+		<!-- <a href="javascript:;" id="order_btn">提交订单</a> -->
+		<input type="submit" name="" value="提交订单" id="order_btn" style="height: 40px;width: 160px;float: right;background-color: #47aa34;border: 0px;color:#fff;font-size: 16px;">
 	</div>	
 	</form>
 	<script type="text/javascript">
