--- a/templates/freshFruit/base_user.html
+++ b/templates/freshFruit/base_user.html
@@ -7,8 +7,10 @@
 		<a href="{% url 'index:indexPage' %}" class="logo fl"><img src="{% static 'images/logo.png' %}"></a>
 		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;{%block option%}{%endblock%}</div>
 		<div class="search_con fr">
-			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
-			<input type="button" class="input_btn fr" name="" value="搜索">
+			<form action="/search/" target="_blank">
+				<input type="text" class="input_text fl" name="q" placeholder="搜索商品">
+				<input type="submit" class="input_btn fr" name="" value="搜索">
+			</form>
 		</div>		
 	</div>
 	{%block user_message%}
